Added console gameboard display working fine now

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-<h2><%=@message%></h2>
+<html>
+    <div class="mainpage">
+        <h2>Welcome to the game</h2>
+        <img src="/joystick.png" alt="Let's play" width="400" height="400">
+    </div>
+</html>
