--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,12 @@
         <div class="navbar"> 
             <div class="navbar-left">
                 <a class="homepage-links" href="/">Home |</a>
+                <% if $player1 %>
                 <a class="homepage-links" href="/gamearena">Start new game |</a>
+                <% end %>
+                <% if $player1 == nil%>
+                <a class="homepage-links" href="/setupgame">Setup new game |</a>
+                <% end %>
                 <a class="homepage-links" href="/about">About |</a> 
                 <a class="homepage-links" href="/quit">Quit |</a>          
             </div>
