--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
             <div class="navbar-left">
                 <a class="homepage-links" href="/">Home |</a>
                 <% if $player1 %>
-                <a class="homepage-links" href="/gamearena">Start new game |</a>
+                <a class="homepage-links" href="/gamearena">Game Arena |</a>
                 <% end %>
                 <% if $player1 == nil%>
                 <a class="homepage-links" href="/setupgame">Setup new game |</a>
