--- a/views/gamearena.erb
+++ b/views/gamearena.erb
@@ -5,7 +5,7 @@
         This is <%=$playerturn%>'s turn
         <% end %>
         <% if @winner%>
-        <span class="winner">The winner is: <%=@winner[0]%></span>
+        <span class="winner">The winner is: <%=$winner%></span>
         <% end %>
     <h2>
     <% if $invalidcoordinates%>
